[package]
edition      = "2024"
name         = "wifi-webfetch"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "wifi-webfetch"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["defmt", "esp32", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "defmt",
  "esp-alloc",
  "esp-radio",
  "esp32",
] }

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32"] }

mipidsi = "0.10.0"                    # ST7735 driver lives here
embedded-graphics = "0.8.1"          # draw shapes, text, images
display-interface-spi = "0.5.0"      # SPI bridge
embedded-hal-bus = "0.3.0"           # SPI bus sharing
static_cell = "2.1.0"

blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-stack.git", rev = "b3ecefc222d8806edd221f266999ca339c52d34e", default-features = false, features = [
  "dhcpv4",
  "tcp",
] }

heapless = { version = "0.9.1" }


critical-section = "1.2.0"
embedded-io = { version = "0.6.1" }
esp-alloc = { version = "0.9.0", features = ["defmt"] }
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32"] }
esp-radio = { version = "0.17.0", features = [
  "defmt",
  "esp-alloc",
  "esp32",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
